==> ThatsFokus/nf-interpreter-1/targets/AzureRTOS/SiliconLabs/_nanoCLR/nanoFramework.Device.OneWire/nf_dev_onewire_nanoFramework_Device_OneWire_OneWireHost.cpp <==
#include "nf_dev_onewire_target.h"
#define ONEWIRE_THREAD_STACK_SIZE 256
#define ONEWIRE_THREAD_PRIORITY   5

HRESULT oneWireInit()
{
    DriverState = ONEWIRE_STOP;

    sl_iostream_usart_init_onewire();

    DriverState = ONEWIRE_READY;

    return S_OK;
}

uint8_t oneWireTouchReset(void)
{
    char reset = 0xF0;
    uint8_t presence;
    size_t bytesRead;

    // flush DMA buffer to ensure cache coherency
    // TODO uart_flush(NF_ONEWIRE_ESP32_UART_NUM);

    // set UART baud rate to 9600bps (required to send the RESET condition to the 1-Wire bus)
    sli_iostream_change_baudrate(sl_iostream_onewire_handle, 9600);

    sl_iostream_write(sl_iostream_onewire_handle, (uint8_t *)&reset, 1);
    sl_iostream_read(sl_iostream_onewire_handle, &presence, 1, &bytesRead);

    // set UART baud rate to 115200bps (normal comm is performed at this baud rate)
    sli_iostream_change_baudrate(sl_iostream_onewire_handle, 115200);

    // check for presence pulse
    return (presence != reset);
}

bool oneWireTouchBit(bool sendbit)
{
    // need to send 1-Wire write 1 or 0 according to sendbit
    char write = sendbit ? IWIRE_WR1 : IWIRE_WR0;
    uint8_t reply;
    size_t bytesRead;

    // flush DMA buffer to ensure cache coherency
    // TODO uart_flush(NF_ONEWIRE_ESP32_UART_NUM);

    sl_iostream_write(sl_iostream_onewire_handle, (uint8_t *)&write, 1);
    sl_iostream_read(sl_iostream_onewire_handle, &reply, 1, &bytesRead);

    // interpret 1-Wire reply
    return (reply == IWIRE_RD);
}

uint8_t oneWireTouchByte(uint8_t sendbyte)
{
    uint8_t send_mask = 0x01, result = 0;
    uint8_t i = 0;
    char writeBuffer[8];
    uint8_t readBuffer[8];
    size_t bytesRead;

    // send byte
    while (send_mask)
    {
        writeBuffer[i] = (sendbyte & send_mask) ? IWIRE_WR1 : IWIRE_WR0;
        i++;
        // rotates the position mask transmit bit
        send_mask <<= 1;
    };

    // flush DMA buffer to ensure cache coherency
    // TODO uart_flush(NF_ONEWIRE_ESP32_UART_NUM);

    sl_iostream_write(sl_iostream_onewire_handle, (uint8_t *)&writeBuffer, 8);
    sl_iostream_read(sl_iostream_onewire_handle, &readBuffer, 8, &bytesRead);

    // reset send mask to interpret the reply
    send_mask = 0x01;

    for (i = 0; i < 8; i++)
    {
        if (readBuffer[i] == IWIRE_RD)
        {
            result |= send_mask;
        }

        send_mask <<= 1;
    }

    return result;
}

HRESULT FindOneDevice(CLR_RT_StackFrame &stack, bool findFirst)
{
    NANOCLR_HEADER();

    uint8_t *serialNumberPointer;
    CLR_RT_HeapBlock hbTimeout;
    CLR_INT64 *timeout;
    bool eventResult = true;

    // set an infinite timeout to wait forever for the operation to complete
    // this value has to be in ticks to be properly loaded by SetupTimeoutFromTicks() below
    hbTimeout.SetInteger((CLR_INT64)-1);
    NANOCLR_CHECK_HRESULT(stack.SetupTimeoutFromTicks(hbTimeout, timeout));

    // this is going to be used to check for the right event in case of simultaneous 1-Wire operations
    if (stack.m_customState == 1)
    {
        FindStruct.DoReset = stack.Arg1().NumericByRefConst().u1 != 0;
        FindStruct.AlarmOnly = stack.Arg2().NumericByRefConst().u1 != 0;
        FindStruct.FindFirst = findFirst;

        // because the 1-Wire bus is shared, acquire the module
        oneWireAquire();

        // spawn working thread to perform the 1-Wire operations

        // 1. allocate memory for thread stack
        workingThreadStack = (uint32_t *)platform_malloc(ONEWIRE_THREAD_STACK_SIZE);

        if (workingThreadStack == NULL)
        {
            NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);
        }

        // 2. create thread
        uint16_t status = tx_thread_create(
            WaitingTask,
#if !defined(BUILD_RTM)
            (CHAR *)"1-Wire Thread",
#else
            NULL,
#endif
            OneWireFindWorkingThread_entry,
            (uint32_t)&FindStruct,
            workingThreadStack,
            ONEWIRE_THREAD_STACK_SIZE,
            ONEWIRE_THREAD_PRIORITY,
            ONEWIRE_THREAD_PRIORITY,
            TX_NO_TIME_SLICE,
            TX_AUTO_START);

        if (status != TX_SUCCESS)
        {
            NANOCLR_SET_AND_LEAVE(CLR_E_PROCESS_EXCEPTION);
        }

        // bump custom state
        stack.m_customState = 2;
    }

    while (eventResult)
    {
        if (WaitingTask->tx_thread_state == TX_TERMINATED)
        {
            // ONEWIRE working thread is now complete
            break;
        }

        // non-blocking wait allowing other threads to run while we wait for the 1-Wire operations to complete
        NANOCLR_CHECK_HRESULT(
            g_CLR_RT_ExecutionEngine.WaitEvents(stack.m_owningThread, *timeout, Event_OneWireHost, eventResult));
    }

    if (eventResult)
    {
        // event occurred

        oneWireRelease();

        // get the result from the working thread execution
        if (OneWireOperationResult)
        {
            // update serialNumber field

            // get a pointer to the managed object instance and check that it's not NULL
            CLR_RT_HeapBlock *pThis = stack.This();
            FAULT_ON_NULL(pThis);

            // get a pointer to the serial number field in the OneWireController instance
            CLR_RT_HeapBlock_Array *serialNumberField = pThis[OneWireHost::FIELD___serialNumber].DereferenceArray();

            _ASSERTE(serialNumberField->m_numOfElements == 8);

            // get a pointer to the first element of the byte array
            serialNumberPointer = (uint8_t *)serialNumberField->GetFirstElement();

            oneWireSerialNum(serialNumberPointer, TRUE);
        }
    }

    // pop timeout heap block from stack
    stack.PopValue();

    // set result
    stack.SetResult_Boolean(OneWireOperationResult);

    NANOCLR_NOCLEANUP();
}
