==> nanoframework/nf-interpreter/targets/ESP32/_nanoCLR/nanoFramework.Device.OneWire/nf_dev_onewire_nanoFramework_Device_OneWire_OneWireHost.cpp <==
#include "nf_dev_onewire_target.h"
#include <target_nf_dev_onewire_config.h>
#include <Esp32_DeviceMapping.h>

HRESULT oneWireInit()
{
    DriverState = ONEWIRE_STOP;

    uart_config_t uart_config = {
        .baud_rate = 115200,
        .data_bits = UART_DATA_8_BITS,
        .parity = UART_PARITY_DISABLE,
        .stop_bits = UART_STOP_BITS_1,
        .flow_ctrl = UART_HW_FLOWCTRL_DISABLE,
        .rx_flow_ctrl_thresh = 0,
        .use_ref_tick = false,
    };

    // get GPIO pins configured for UART assigned to 1-Wire
    // need to subtract one to get the correct index of UART in mapped device pins
    int txPin = Esp32_GetMappedDevicePins(DEV_TYPE_SERIAL, NF_ONEWIRE_ESP32_UART_NUM - 1, Esp32SerialPin_Tx);
    int rxPin = Esp32_GetMappedDevicePins(DEV_TYPE_SERIAL, NF_ONEWIRE_ESP32_UART_NUM - 1, Esp32SerialPin_Rx);

    // check if TX, RX pins have been previously set
    if (txPin == UART_PIN_NO_CHANGE || rxPin == UART_PIN_NO_CHANGE)
    {
        return CLR_E_PIN_UNAVAILABLE;
    }

    // configure GPIO and UART
    if (gpio_set_direction(gpio_num_t(txPin), GPIO_MODE_OUTPUT_OD) != ESP_OK)
    {
        return CLR_E_INVALID_OPERATION;
    }

    if (uart_param_config(NF_ONEWIRE_ESP32_UART_NUM, &uart_config) != ESP_OK)
    {
        return CLR_E_INVALID_OPERATION;
    }

    if (uart_set_pin(NF_ONEWIRE_ESP32_UART_NUM, txPin, rxPin, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE) != ESP_OK)
    {
        return CLR_E_INVALID_OPERATION;
    }

    if (uart_driver_install(NF_ONEWIRE_ESP32_UART_NUM, UART_FIFO_LEN * 2, 0, 0, NULL, ESP_INTR_FLAG_IRAM) != ESP_OK)
    {
        return CLR_E_INVALID_OPERATION;
    }

    DriverState = ONEWIRE_READY;

    return S_OK;
}

uint8_t oneWireTouchReset(void)
{
    char reset = 0xF0;
    uint8_t presence;

    // flush DMA buffer to ensure cache coherency
    uart_flush(NF_ONEWIRE_ESP32_UART_NUM);
    // set UART baud rate to 9600bps (required to send the RESET condition to the 1-Wire bus)
    uart_set_baudrate(NF_ONEWIRE_ESP32_UART_NUM, 9600);

    uart_write_bytes(NF_ONEWIRE_ESP32_UART_NUM, (const char *)&reset, 1);
    uart_read_bytes(NF_ONEWIRE_ESP32_UART_NUM, &presence, 1, 20 / portTICK_RATE_MS);

    // set UART baud rate to 115200bps (normal comm is performed at this baud rate)
    uart_set_baudrate(NF_ONEWIRE_ESP32_UART_NUM, 115200);

    // check for presence pulse
    return (presence != reset);
}

bool oneWireTouchBit(bool sendbit)
{
    // need to send 1-Wire write 1 or 0 according to sendbit
    char write = sendbit ? IWIRE_WR1 : IWIRE_WR0;
    uint8_t reply;

    // flush DMA buffer to ensure cache coherency
    uart_flush(NF_ONEWIRE_ESP32_UART_NUM);

    uart_write_bytes(NF_ONEWIRE_ESP32_UART_NUM, (const char *)&write, 1);
    uart_read_bytes(NF_ONEWIRE_ESP32_UART_NUM, &reply, 1, 20 / portTICK_RATE_MS);

    // interpret 1-Wire reply
    return (reply == IWIRE_RD);
}

uint8_t oneWireTouchByte(uint8_t sendbyte)
{
    uint8_t send_mask = 0x01, result = 0;
    uint8_t i = 0;
    char writeBuffer[8];
    uint8_t readBuffer[8];

    // send byte
    while (send_mask)
    {
        writeBuffer[i] = (sendbyte & send_mask) ? IWIRE_WR1 : IWIRE_WR0;
        i++;
        // rotates the position mask transmit bit
        send_mask <<= 1;
    };

    // flush DMA buffer to ensure cache coherency
    uart_flush(NF_ONEWIRE_ESP32_UART_NUM);

    uart_write_bytes(NF_ONEWIRE_ESP32_UART_NUM, (const char *)writeBuffer, 8);
    uart_read_bytes(NF_ONEWIRE_ESP32_UART_NUM, readBuffer, 8, 20 / portTICK_RATE_MS);

    // reset send mask to interpret the reply
    send_mask = 0x01;

    for (i = 0; i < 8; i++)
    {
        if (readBuffer[i] == IWIRE_RD)
        {
            result |= send_mask;
        }

        send_mask <<= 1;
    }

    return result;
}

HRESULT FindOneDevice(CLR_RT_StackFrame &stack, bool findFirst)
{
    uint8_t *serialNumberPointer;
    CLR_RT_HeapBlock hbTimeout;
    CLR_INT64 *timeout;
    TaskHandle_t task;
    HRESULT result;

    // set an infinite timeout to wait forever for the operation to complete
    // this value has to be in ticks to be properly loaded by SetupTimeoutFromTicks() below
    hbTimeout.SetInteger((CLR_INT64)-1);
    result = stack.SetupTimeoutFromTicks(hbTimeout, timeout);

    if (result != S_OK)
    {
        return result;
    }

    // this is going to be used to check for the right event in case of simultaneous 1-Wire operations
    if (stack.m_customState == 1)
    {
        FindStruct.DoReset = stack.Arg1().NumericByRefConst().u1 != 0;
        FindStruct.AlarmOnly = stack.Arg2().NumericByRefConst().u1 != 0;
        FindStruct.FindFirst = findFirst;

        // because the 1-Wire bus is shared, acquire the module
        oneWireAquire();

        // spawn working thread to perform the 1-Wire operations
        WaitingTask = xTaskGetCurrentTaskHandle();
        xTaskCreate(OneWireFindWorkingThread, "OWWT", 2048, &FindStruct, 12, &task);

        // bump custom state
        stack.m_customState = 2;
    }

    // wait for 1-Wire operation complete
    ulTaskNotifyTake(pdTRUE, portMAX_DELAY);

    oneWireRelease();

    // get the result from the working thread execution
    if (OneWireOperationResult)
    {
        // update serialNumber field

        // get a pointer to the managed object instance and check that it's not NULL
        CLR_RT_HeapBlock *pThis = stack.This();
        if (pThis == NULL)
        {
            return CLR_E_NULL_REFERENCE;
        }

        // get a pointer to the serial number field in the OneWireController instance
        CLR_RT_HeapBlock_Array *serialNumberField =
            pThis[Library_nf_dev_onewire_nanoFramework_Device_OneWire_OneWireHost::FIELD___serialNumber]
                .DereferenceArray();

        _ASSERTE(serialNumberField->m_numOfElements == 8);

        // get a pointer to the first element of the byte array
        serialNumberPointer = (uint8_t *)serialNumberField->GetFirstElement();

        oneWireSerialNum(serialNumberPointer, TRUE);
    }

    // pop timeout heap block from stack
    stack.PopValue();

    // set result
    stack.SetResult_Boolean(OneWireOperationResult);

    return S_OK;
}
